# vaktisalah-gtk-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  io.github.eminfedar.vaktisalah-gtk-rs.json
.cargo/: config.toml
data/: preferences.json  style.css
export/: com.eminfedar.vaktisalah-gtk-rs.appdata.xml  com.eminfedar.vaktisalah-gtk-rs.desktop  com.eminfedar.vaktisalah-gtk.json  io.github.eminfedar.vaktisalah-gtk-rs.desktop  io.github.eminfedar.vaktisalah-gtk-rs.json  io.github.eminfedar.vaktisalah-gtk-rs.xml
locales/: app.yml
localization/: en_US  tr_TR
po/: POTFILES  nl.po  tr.po  vaktisalah-gtk-rs.pot
po/output/nl/LC_MESSAGES/: vaktisalah-gtk-rs.mo
po/output/tr/LC_MESSAGES/: vaktisalah-gtk-rs.mo
src/: current_locale.rs  listitem.rs  main.rs  networking.rs  prayer.rs  preferences.rs  sound.rs  translations.rs  trayicon.rs  ui.rs  ui_relm.rs
src/rowprayertime/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
ui/: MainWindow.blp  RowPrayerTime.blp
