[package]
name = "vaktisalah-gtk-rs"
version = "2.3.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
relm4 = { version = "0.8", features = ["libadwaita", "macros", "gnome_46"] }
tokio = { version = "1", features = ["fs", "time"]}

# HTTP Request
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Timing
chrono = "0.4"

# JSON Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio Playing
rodio = { version = "0.17", default-features = false, features = ["vorbis"] }

# Lazy Initialization of variables
once_cell = "1"

# Localization
rust-i18n = { version= "3", default-features = false }

# GTK UI Update
tracker = "0.2"

# Tray Icon
ksni = "0.2.2"