[package]
name = "vaktisalah-gtk-rs"
description = "Islamic Prayer Times application."
version = "2.5.1"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
opt-level = 3
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
gtk = { version = "0.9", package = "gtk4", features = ["v4_16", "blueprint"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }

gettext-rs = { version = "0.7", features = ["gettext-system"] }
formatx = "*"

tokio = { version = "1", features = ["full"] }

# async channel
async-channel = "2"

# HTTP Request
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Timing
chrono = { version = "0.4", features = ["unstable-locales"] }

# JSON Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio Playing
rodio = { version = "0.20.1", default-features = false, features = ["vorbis"] }

# Lazy Initialization of variables
once_cell = "1"

# Localization
rust-i18n = { version = "3", default-features = false }

# Tray Icon
ksni = { version = "0.3", features = ["blocking"] }

[package.metadata.deb]
maintainer = "Emin Fedar <eminfedar@gmail.com>"
copyright = "2025, Emin Fedar <eminfedar@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
Islamic Prayer Times application.\
Fetches prayer times from Türkiye's Diyanet İşleri Başkanlığı(Presidency of Religious Affairs).\
Requires internet to fetch times."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    # App Data
    [
        "export/io.github.eminfedar.vaktisalah-gtk-rs.svg",
        "usr/share/icons/hicolor/scalable/apps/io.github.eminfedar.vaktisalah-gtk-rs.svg",
        "644",
    ],
    [
        "export/io.github.eminfedar.vaktisalah-gtk-rs.png",
        "usr/share/icons/hicolor/128x128/apps/io.github.eminfedar.vaktisalah-gtk-rs.png",
        "644",
    ],
    [
        "export/io.github.eminfedar.vaktisalah-gtk-rs.desktop",
        "usr/share/applications/io.github.eminfedar.vaktisalah-gtk-rs.desktop",
        "644",
    ],

    # Translations
    [
        "po/output/tr/LC_MESSAGES/vaktisalah-gtk-rs.mo",
        "usr/share/locale/tr/LC_MESSAGES/vaktisalah-gtk-rs.mo",
        "755",
    ],
    [
        "po/output/nl/LC_MESSAGES/vaktisalah-gtk-rs.mo",
        "usr/share/locale/nl/LC_MESSAGES/vaktisalah-gtk-rs.mo",
        "755",
    ],

    # Binary
    [
        "target/release/vaktisalah-gtk-rs",
        "usr/bin/vaktisalah-gtk-rs",
        "755",
    ],
]
